dsl/generated-sources/pointdb/indexfuncdsl/IndexFuncDSLParser.java
// Generated from IndexFuncDSL.g4 by ANTLR 4.4
package pointdb.indexfuncdsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IndexFuncDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PARAM_START=2, PARAM_END=3, PARAM_ASSIGNMENT=4, PARAM_SEPARATOR=5, 
		LETTER=6, UNDERSCORE=7, DIGIT=8, SIGN=9, DECIMAL_SEPARATOR=10;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'('", "')'", "'='", "';'", "LETTER", "'_'", "DIGIT", 
		"SIGN", "'.'"
	};
	public static final int
		RULE_index_func = 0, RULE_param_sequence = 1, RULE_param = 2, RULE_id = 3, 
		RULE_value = 4, RULE_number = 5;
	public static final String[] ruleNames = {
		"index_func", "param_sequence", "param", "id", "value", "number"
	};

	@Override
	public String getGrammarFileName() { return "IndexFuncDSL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IndexFuncDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Index_funcContext extends ParserRuleContext {
		public IdContext func_name;
		public Param_sequenceContext params;
		public TerminalNode PARAM_START() { return getToken(IndexFuncDSLParser.PARAM_START, 0); }
		public TerminalNode WS(int i) {
			return getToken(IndexFuncDSLParser.WS, i);
		}
		public TerminalNode EOF() { return getToken(IndexFuncDSLParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(IndexFuncDSLParser.WS); }
		public TerminalNode PARAM_END() { return getToken(IndexFuncDSLParser.PARAM_END, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Param_sequenceContext param_sequence() {
			return getRuleContext(Param_sequenceContext.class,0);
		}
		public Index_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitIndex_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_funcContext index_func() throws RecognitionException {
		Index_funcContext _localctx = new Index_funcContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_index_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(12); match(WS);
				}
			}

			setState(15); ((Index_funcContext)_localctx).func_name = id();
			setState(17);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(16); match(WS);
				}
			}

			setState(33);
			_la = _input.LA(1);
			if (_la==PARAM_START) {
				{
				setState(19); match(PARAM_START);
				setState(21);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(20); match(WS);
					}
					break;
				}
				setState(24);
				_la = _input.LA(1);
				if (_la==LETTER || _la==UNDERSCORE) {
					{
					setState(23); ((Index_funcContext)_localctx).params = param_sequence();
					}
				}

				setState(27);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(26); match(WS);
					}
				}

				setState(29); match(PARAM_END);
				setState(31);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(30); match(WS);
					}
				}

				}
			}

			setState(35); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_sequenceContext extends ParserRuleContext {
		public List<TerminalNode> PARAM_SEPARATOR() { return getTokens(IndexFuncDSLParser.PARAM_SEPARATOR); }
		public TerminalNode PARAM_SEPARATOR(int i) {
			return getToken(IndexFuncDSLParser.PARAM_SEPARATOR, i);
		}
		public TerminalNode WS(int i) {
			return getToken(IndexFuncDSLParser.WS, i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public List<TerminalNode> WS() { return getTokens(IndexFuncDSLParser.WS); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public Param_sequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_sequence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitParam_sequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_sequenceContext param_sequence() throws RecognitionException {
		Param_sequenceContext _localctx = new Param_sequenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_param_sequence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37); param();
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(39);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(38); match(WS);
						}
					}

					setState(41); match(PARAM_SEPARATOR);
					setState(43);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(42); match(WS);
						}
					}

					setState(45); param();
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public IdContext param_name;
		public ValueContext param_value;
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode WS(int i) {
			return getToken(IndexFuncDSLParser.WS, i);
		}
		public TerminalNode PARAM_ASSIGNMENT() { return getToken(IndexFuncDSLParser.PARAM_ASSIGNMENT, 0); }
		public List<TerminalNode> WS() { return getTokens(IndexFuncDSLParser.WS); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); ((ParamContext)_localctx).param_name = id();
			setState(53);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(52); match(WS);
				}
			}

			setState(55); match(PARAM_ASSIGNMENT);
			setState(57);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(56); match(WS);
				}
			}

			setState(59); ((ParamContext)_localctx).param_value = value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public List<TerminalNode> UNDERSCORE() { return getTokens(IndexFuncDSLParser.UNDERSCORE); }
		public List<TerminalNode> LETTER() { return getTokens(IndexFuncDSLParser.LETTER); }
		public TerminalNode DIGIT(int i) {
			return getToken(IndexFuncDSLParser.DIGIT, i);
		}
		public TerminalNode LETTER(int i) {
			return getToken(IndexFuncDSLParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(IndexFuncDSLParser.DIGIT); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(IndexFuncDSLParser.UNDERSCORE, i);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !(_la==LETTER || _la==UNDERSCORE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LETTER) | (1L << UNDERSCORE) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(62);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LETTER) | (1L << UNDERSCORE) | (1L << DIGIT))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode DECIMAL_SEPARATOR() { return getToken(IndexFuncDSLParser.DECIMAL_SEPARATOR, 0); }
		public TerminalNode DIGIT(int i) {
			return getToken(IndexFuncDSLParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(IndexFuncDSLParser.DIGIT); }
		public TerminalNode SIGN() { return getToken(IndexFuncDSLParser.SIGN, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndexFuncDSLVisitor ) return ((IndexFuncDSLVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if (_la==SIGN) {
				{
				setState(70); match(SIGN);
				}
			}

			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73); match(DIGIT);
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			setState(84);
			_la = _input.LA(1);
			if (_la==DECIMAL_SEPARATOR) {
				{
				setState(78); match(DECIMAL_SEPARATOR);
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79); match(DIGIT);
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DIGIT );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}